# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import staffRouter from "./staff";
 import customersRouter from "./customers";
 import eventsRouter from "./events";
 import ordersRouter from "./orders";
+import ticketsRouter from "./tickets";
 import inventoryRouter from "./inventory";
 import categoriesRouter from "./categories";
 import productsRouter from "./products";
@@ -61,6 +62,7 @@ router.use("/reports", reportsRouter);
 router.use("/", dundaRouter);
 router.use("/categories", categoriesRouter);
 router.use("/orders", ordersRouter);
+router.use("/tickets", ticketsRouter);
 router.use("/staff", staffRouter);
 router.use("/shifts", staffRouter);
 router.use("/customers", customersRouter);
